2001-11-14  Thien-Thi Nguyen  <ttn@glug.org>

	* scheme-procedures.texi: Spell "library" correctly.

2001-11-13  Neil Jerram  <neil@ossau.uklinux.net>

	* scheme-data.texi, scheme-evaluation.texi, scheme-io.texi: Merge
	appropriate recent doc enhancements from unstable branch.

	* new-docstrings.texi, posix.texi, scheme-binding.texi,
	scheme-control.texi, scheme-data.texi, scheme-debug.texi,
	scheme-evaluation.texi, scheme-io.texi, scheme-memory.texi,
	scheme-options.texi: Automatic updates corresponding to changed
	docstrings in libguile's C source code.

	* scheme-data.texi (String Predicates): Correct doc for
	string-null?.  Thanks to Scott Lenser!

2001-11-12  Neil Jerram  <neil@ossau.uklinux.net>

	* scheme-data.texi (String Searching): Add missing "for".  Thanks
	to Scott Lenser.

2001-11-06  Thien-Thi Nguyen  <ttn@glug.org>

	* srfi-modules.texi (SRFI-19, SRFI-19 Constants, SRFI-19 Current
	time and clock resolution, SRFI-19 Time object and accessors,
	SRFI-19 Time comparison procedures, SRFI-19 Time arithmetic
	procedures, SRFI-19 Date object and accessors, SRFI-19
	Time/Date/Julian Day/Modified Julian Day converters, SRFI-19 Date
	to string/string to date converters): New nodes.
	(SRFI Support): Add "SRFI-19" to menu.

2001-10-27  Gary Houston  <ghouston@arglist.com>

	* guile.texi, scsh.texi: removed obsolete guile-scsh material
	and updated links (I don't know if it should remain in the
	main menu.  It's like slib I think.)

	* minor updates to the slib installation notes.

2001-10-05  Thien-Thi Nguyen  <ttn@glug.org>

	* scheme-io.texi (Writing): Add entry for `display'.
	Include in R5RS Index.  Thanks to Alex Schroeder for suggestion.

2001-09-26  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-modules.texi (SRFI-13): Tyop fix.
	(SRFI-13): Changed paragraph about bindings both in the code and
	in SRFI-13.

	* misc-modules.texi (Formatted Output): Tyop fix.
	(Formatted Output): Document ~g properly.
