@@ -1,3 +1,8 @@
+2001-11-18  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* guile-tut.texi (History of Guile and its motivations): Update
+	Tcl war URLs.
+
 2001-09-19  Thien-Thi Nguyen  <ttn@glug.org>
 
 	* guile-tut.texi: Fix improper `@result' usage.
